Fix hero quote falling behind background image at certain screen widths

--- a/website/assets/styles/pages/homepage.less
+++ b/website/assets/styles/pages/homepage.less
@@ -104,6 +104,8 @@
     [purpose='hero-quote'] {
       margin-bottom: 40px;
       text-align: left;
+      position: relative;
+      z-index: 10;
       img {
         height: 18px;
         margin-right: 16px;
